# PulseGrid-AegisLink

./: .dockerignore  .env.example  .gitignore  Dockerfile.go  Dockerfile.nginx  Dockerfile.rust  Dockerfile.web  README.md  docker-compose.yml  drizzle.config.ts  package.json
.github/workflows/: ci.yml  deploy.yml  release.yml  security.yml
apps/api-gateway/: go.mod  main.go
apps/mqtt-broker/: go.mod  main.go
apps/sfu-server/: go.mod  main.go
apps/web-app/: jest.config.js  next.config.js  package.json  tailwind.config.js  tsconfig.json
config/: mosquitto.conf
contracts/payment-router/: PaymentRouter.sol
contracts/tip-escrow/: TipEscrow.sol
database/: package.json  tsconfig.json
database/drizzle/: schema.ts
database/mongodb/: README.md
database/mongodb/schemas/: chat-messages.js  moderation.js  telemetry.js
database/postgres/: README.md  schema.sql
database/postgres/migrations/: 001_init.sql  002_add_rbac.sql  003_add_audit_logs.sql
database/redis/: commands.md  redis.conf
docs/: agent-skill.md  implementation_instruction.md  plan.md  tech-stack.md
firmware/core/: Cargo.toml  README.md
firmware/core/src/: main.rs
firmware/secure-element/: Cargo.toml
firmware/secure-element/src/: crypto.rs  lib.rs  se.rs
infrastructure/choreo/: choreo.yaml
infrastructure/nginx/: nginx.conf
infrastructure/pulumi/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  index.ts  package.json
infrastructure/terraform/: main.tf  outputs.tf  providers.tf  variables.tf
tests/: README.md  requirements.txt
tests/resources/: common.robot
(+24 files in other folders)
