[package]
name = "secure-element"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2"
nb = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes = "0.8"
cipher = "0.4"
sha2 = "0.10"
hmac = "0.12"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
